--- a/chrome/test/data/vr/e2e_test_files/html/webxr_test_presentation_promise_unresolved_during_don.html
+++ b/chrome/test/data/vr/e2e_test_files/html/webxr_test_presentation_promise_unresolved_during_don.html
@@ -5,17 +5,17 @@ resolved or rejected while the DON flow is active.
 -->
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../resources/webvr_e2e.css">
+    <link rel="stylesheet" type="text/css" href="../resources/webxr_e2e.css">
   </head>
   <body>
     <canvas id="webgl-canvas"></canvas>
     <script src="../../../../../../third_party/WebKit/LayoutTests/resources/testharness.js"></script>
-    <script src="../resources/webvr_e2e.js"></script>
-    <script src="../resources/webvr_boilerplate.js"></script>
+    <script src="../resources/webxr_e2e.js"></script>
+    <script src="../resources/webxr_boilerplate.js"></script>
     <script>
       var t = async_test("Presentation promise is unresolved during DON flow");
-      function onVrRequestPresentWithDon() {
-        vrDisplay.requestPresent([{source: webglCanvas}]).then( () => {
+      function onExclusiveRequestWithDon() {
+        xrDevice.requestSession({exclusive: true}).then( (session) => {
           t.step( () => {
             assert_unreached("requestPresent promise resolved");
           });
@@ -26,7 +26,7 @@ resolved or rejected while the DON flow is active.
         });
         window.setTimeout( () => {t.done();}, 2000);
       }
-      webglCanvas.onclick = onVrRequestPresentWithDon;
+      webglCanvas.onclick = onExclusiveRequestWithDon;
     </script>
   </body>
 </html>
